# ea-rag

./: .env.example  README.md  pyproject.toml
artifacts/cache/timings/: timings.jsonl
artifacts/eval/: dbp15k.json  dbpyg.json  model_selection-google_gemini-2.5_flash.json  model_selection-google_gemini_2.5_flash_lite.json  model_selection-openai_gpt-oss_120b.json  model_selection-openai_gpt_oss_20b.json  model_selection-xai_grok_4_fast_non_reasoning.json  model_selection-xai_grok_4_fast_reasoning.json  model_selection-xai_grok_code_fast_1.json  temp_2.0-google_gemini_2.5_flash.json
artifacts/predictions/: model_selection-google_gemini_2.5_flash_lite.jsonl  model_selection-openai_gpt_oss_120b.jsonl  model_selection-openai_gpt_oss_20b.jsonl  model_selection-xai_grok_4_fast_non_reasoning.jsonl  model_selection-xai_grok_4_fast_reasoning.jsonl  model_selection-xai_grok_code_fast_1.jsonl  temp_0.0-google_gemini-2.5-flash.jsonl  temp_1.0-google_gemini_2.5_flash.jsonl  temp_2.0-google_gemini_2.5_flash.jsonl
docs/: cli.md  data_naming_convention.md  dbp15k_run.md  dbp_yg_run.md
ea_rag/: __init__.py  cli.py  config.py  embeddings.py  entity_io.py  eval.py  kg_parser.py  kg_tsv.py  llm.py  metrics.py  predict.py  retrieval.py  subgraph.py  synthetic.py  timings.py  vectorstore.py
